deployments/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: stephengrider/multi-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
