deployments/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: stephengrider/multi-worker:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
