deployments/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - port: 3000
