deployments/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-server
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - port: 6379
