deployments/worker-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-cluster-ip-service
spec:
  type: NodePort
  selector:
    app: worker
  ports:
    - port: 5000
