deployments/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    kubernetes.io/ingress.global-static-ip-name: 'ingress-static-ip'
spec:
  tls:
    - hosts:
        - www.k8s-multi.com
      secretName: k8s-multi-com-tls-prod
  rules:
    - host: www.k8s-multi.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
    - host: www.k8s-multi.com
      http:
        paths:
          - path: /api/*
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
